# tree-sitter-bauble

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-bauble.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_bauble/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterBauble/: bauble.h
bindings/swift/TreeSitterBaubleTests/: TreeSitterBaubleTests.swift
corpus/: arrays.txt
queries/: highlights.scm  indents.scm  locals.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
