[package]
name = "tree-sitter-bauble"
description = "A dependency driven asset decleration language"
version = "0.1.0"
authors = ["Isse git@isse.rs"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "bauble"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/issew/tree-sitter-bauble"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.1"
